# EchoSpeak

./: README.md  settings.gradle.kts
app-store-screenshots/: package.json  pnpm-lock.yaml
app-store-screenshots/src/app/: layout.tsx  page.tsx
audio-core/: build.gradle.kts
basic-modules/basic-deps/: build.gradle.kts
basic-modules/common-ads/: build.gradle.kts
basic-modules/common-settings/: build.gradle.kts
business-modules/speech-echo/: build.gradle.kts
composeApp/: build.gradle.kts
composeApp/release/: output-metadata.json
composeApp/release/baselineProfiles/0/: composeApp-release.dm
composeApp/release/baselineProfiles/1/: composeApp-release.dm
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/cpp/: CMakeLists.txt  rnnoise_jni.c
composeApp/src/androidMain/cpp/rnnoise/src/: os_support.h
composeApp/src/androidMain/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
composeApp/src/androidMain/res/values-es/: strings.xml
composeApp/src/androidMain/res/values-fr/: strings.xml
design/: app-icon-design.md  audio-visualization-implementation.md  design.pen
docs/: HOW_TO_TEST_I18N.md  I18N_CHECKLIST.md  I18N_IMPLEMENTATION_SUMMARY.md  INTERNATIONALIZATION.md  LANGUAGE_COMPARISON.md
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
key-store/: client_secret_697385350234-fr6hcsrq1fn2232lbql2nvnt7qmbk79p.apps.googleusercontent.com.json  public.jks
scripts/: test_languages.sh  verify_i18n.sh
(+100 files in other folders)
